--- a/package.json
+++ b/package.json
@@ -1,31 +1,41 @@
 {
-  "name": "testgulp",
-  "version": "1.0.0",
-  "description": "Asignment csc front-end",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/letrungdat/CourseAssignment.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/letrungdat/CourseAssignment/issues"
-  },
-  "homepage": "https://github.com/letrungdat/CourseAssignment/index.html",
-  "devDependencies": {
-    "browser-sync": "^2.11.1",
-    "gulp": "^3.9.1",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^2.3.1",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3",
-    "jshint": "^2.9.1"
-  }
+    "name": "testgulp",
+    "version": "1.0.0",
+    "description": "Asignment csc front-end",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "scripts": {
+        "test": "karma start karma.conf.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/letrungdat/CourseAssignment.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/letrungdat/CourseAssignment/issues"
+    },
+    "homepage": "https://github.com/letrungdat/CourseAssignment/index.html",
+    "devDependencies": {
+        "browser-sync": "^2.11.1",
+        "gulp": "^3.9.1",
+        "gulp-coffee": "^2.3.1",
+        "gulp-concat": "^2.6.0",
+        "gulp-connect": "^2.3.1",
+        "gulp-imagemin": "^2.4.0",
+        "gulp-jshint": "^2.0.0",
+        "gulp-sass": "^2.2.0",
+        "gulp-uglify": "^1.5.3",
+        "jasmine-node": "^1.14.5",
+        "jshint": "^2.9.1",
+        "karma": "^0.13.21",
+        "karma-chrome-launcher": "^0.2.2",
+        "karma-jasmine": "^0.3.7"
+    },
+    "dependencies": {
+        "jasmine-core": "^2.4.1"
+    }
 }
